# stella-rs

./: .gitignore  Cargo.toml  LICENSE  LSF_CASCADING_JOBS_USER_MANUAL.md  README.md  cas9_recording_worker.py  config_loader.py  job_monitor.py  launch_cascade.py  master_gt_worker.py  pyproject.toml  reconstruction_worker.py
.github/workflows/: publish_to_pypi.yml
cascade_workflow/: AGGREGATION_GUIDE.md  README.md  __init__.py
cascade_workflow/configs/examples/: cascade_config_cas9_statistics.yaml  cascade_config_debug.yaml  cascade_config_instance_001.yaml  cascade_config_instance_002.yaml  cascade_config_massive_simulation.yaml  cascade_config_statistical_test.yaml  cascade_config_test.yaml
cascade_workflow/configs/production/: cascade_config.yaml  cascade_config_medium.yaml  cascade_config_pilot.yaml
cascade_workflow/docs/: CAS9_SIMULATION_STATISTICS.md  JOB_THROTTLING_GUIDE.md  LSF_DISTRIBUTED_STRATEGY.md  PER_TIER_RECONSTRUCTION_STATISTICS.md
cascade_workflow/lsf_templates/: cas9_recording_job_template.lsf  master_gt_job.lsf  reconstruction_job_template.lsf
cascade_workflow/shared_test/: gt_tree.pkl  job_monitor.py  master_gt_worker.py  reconstruction_metrics_table_multi_tier.py  reconstruction_worker.py
cascade_workflow/shared_test/cas9_instances/: instance0_sim0_tier2_instance.pkl  instance0_sim0_tier3_instance.pkl  instance0_sim0_tier4_instance.pkl
cascade_workflow/shared_test/jobs/: cas9_recording_job_template.lsf  master_gt_job.lsf  reconstruction_job_template.lsf
cascade_workflow/shared_test/results/: instance0_sim0_recon0_tier1_greedy_metrics.json  instance0_sim0_recon0_tier1_greedy_metrics.parquet  instance0_sim0_recon0_tier1_nj_metrics.json  instance0_sim0_recon0_tier1_nj_metrics.parquet  instance0_sim0_recon0_tier2_greedy_metrics.json  instance0_sim0_recon0_tier2_greedy_metrics.parquet  instance0_sim0_recon0_tier2_nj_metrics.json  instance0_sim0_recon0_tier2_nj_metrics.parquet  instance0_sim0_recon0_tier3_greedy_metrics.json  instance0_sim0_recon0_tier3_greedy_metrics.parquet  instance0_sim0_recon0_tier3_nj_metrics.json  instance0_sim0_recon0_tier3_nj_metrics.parquet  instance0_sim0_recon0_tier4_greedy_metrics.json  instance0_sim0_recon0_tier4_greedy_metrics.parquet  instance0_sim0_recon0_tier4_nj_metrics.json  instance0_sim0_recon0_tier4_nj_metrics.parquet
cascade_workflow/shared_test/shared_test/: gt_tree.pkl
cascade_workflow/src/: __init__.py  lsf_coordinator.py  reanalyze_experiment.py
cascade_workflow/src/core/: __init__.py  launch_cascade.py  metrics_computation.py  shared_metrics.py
cascade_workflow/src/testing/: README.md  local_test_pipeline.py  test_config_mini.yaml
cascade_workflow/src/utils/: __init__.py  config_loader.py  (+7 more)
jobs/: cas9_recording_job_template.lsf  master_gt_job.lsf  reconstruction_job_template.lsf
src/: fast_triplets.rs  lib.rs  likelihood.rs  optimized_triplets.rs  parallel_triplets.rs  parsimony.rs  phs.rs  rf_distance.rs  triplets.rs  ultra_fast_triplets.rs
stellars/: __init__.py  distances.py  metrics.py  results.py  usage_guide.py
(+23 files in other folders)
